--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vuesax": "^3.12.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.18.13",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -31,6 +31,7 @@
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^27.0.6",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
@@ -40,7 +41,12 @@
     "tailwind-scroll-behavior": "^1.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   },
   "eslintConfig": {
     "root": true,
@@ -72,5 +78,4 @@
     "last 2 versions",
     "not dead"
   ]
-
 }
